Bug 284793 - Contact list cannot be closed using the "default" shortcut Ctrl+Q
Summary: Contact list cannot be closed using the "default" shortcut Ctrl+Q
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
: 298937 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-23 16:16 UTC by Elias Probst
Modified: 2013-03-02 15:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2011-10-23 16:16:45 UTC
Version:           git-latest (using KDE 4.7.2) 
OS:                Linux

Nearly every KDE app (and others too) can be closed using Ctrl+Q.
This is not possible for the Telepathy Contact list.

Reproducible: Always

Steps to Reproduce:
1. Open Telepathy Contact list
2. Try to close it using Ctrl+Q

Actual Results:  
Contact list doesn't close.

Expected Results:  
I'd expect the contact list to close when using Ctrl+Q - just the same as when using the window decoration's "close/quit" functionality.
Comment 1 George Brooke 2011-10-23 16:47:45 UTC
In monolithic IM apps ctrl+q usually quits the program (which has the effect of taking the user offline) whereas alt+f4 and WM decoration close simply hides the contact list.

Perhaps using Ctrl+Q in the contact list should set accounts to offline as well as closing the contact list as this would match the user expectations of anyone coming from a monolithic client (i.e. every other IM client).

This is also closer to the behavior of IIRC most other applications which can minimise to the systray — at least akregator, amarok and kmail — all of which hide on alt+f4 or windeco close and quit completely on ctrl+q
Comment 2 Martin Klapetek 2011-10-31 14:11:01 UTC
Ok, I'll implement Ctrl+Q as an action that closes contact list and sets you offline - objections?
Comment 3 David Edmundson 2011-10-31 14:56:48 UTC
I don't see any reason to have special 'go offline' behaviour from window closing.

Also if you inherit from the correct KXmlGuiWindow class, you should have control+w, control+q automagically.
Comment 4 Martin Klapetek 2011-10-31 15:05:04 UTC
Me neither but apparently other KDE apps do that - amarok - playing, alt+f4 closes but keeps playing, ctrl+q closes and stops playing, similar with kmail etc. 

I have no strong opinions on either one.
Comment 5 Martin Klapetek 2012-04-28 13:01:55 UTC
*** Bug 298937 has been marked as a duplicate of this bug. ***
Comment 6 Roman 2013-03-02 15:08:16 UTC
Git commit b3958e127b84c1feb3a51c81825811b7bfa51176 by Roman Nazarenko.
Committed on 02/03/2013 at 15:30.
Pushed by romann into branch 'master'.

Quit shortcut (Ctrl+Q) is fixed.

REVIEW: 109241

M  +6    -0    main-widget.cpp

http://commits.kde.org/telepathy-contact-list/b3958e127b84c1feb3a51c81825811b7bfa51176