Quit shortcut (Ctrl+Q) is fixed.

REVIEW: 109241
BUG: 284793